--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     </head>
     <body>
         <form method="post" action="restaurant/colorPost" id="form" class="validate">
+        
             <div class="form-field">
               <label for="full-name">Full Name</label>
-              <input type="text" name="main" id="full-name" placeholder="Joe Bloggs" required />
+              <input type="text" name="restaurant" id="full-name" placeholder="Joe Bloggs" required />
             </div>
             <div class="form-field">
               <label for="email-input">Email</label>
